--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "autoprefixer": "^10.4.20",
+    "axios": "^1.7.7",
     "lucide-vue-next": "^0.454.0",
     "tailwindcss": "^3.4.14",
     "vue": "^3.5.12"
